--- a/basic-react-components/6.2.md
+++ b/basic-react-components/6.2.md
@@ -74,7 +74,7 @@ A React component that will potentially contain `state` can be created by callin
 </tr>
 </table>
 
-The most important component configuration option is `render`. This confirmation option is required and is a function that returns React nodes. All other component configurations are optional.
+The most important component configuration option is `render`. This configuration option is required and is a function that returns React nodes. All other component configurations are optional.
 
 The following code is an example of creating a `Timer` React component from React nodes using `React.createClass()`.
 
@@ -82,11 +82,9 @@ Make sure you read the comments in the code.
 
 > [source code](https://jsfiddle.net/12u58fjb/#tabs=js,result,html,resources)
 
-It might look like a lot of code but all that is going on is passing the createClass function a configuration object containing 5 properties (`getInitialState`, `tick`, `componentDidMount`, `componentWillUnmount`, `render`).
+It looks like a lot of code. However, the bulk of the code simply involves creating a Timer component and passing the `createClass` function creating the component a configuration object containing 5 properties (`getInitialState`, `tick`, `componentDidMount`, `componentWillUnmount`, `render`).
 
-Notice that I am using both `this.state` and `this.props` in the code example and that `Timer` is capitalized. When creating custom React components you need to capitalize the name of the component.
-
-Additionally, the value `this` among the configuration options refers to the component instance created. We'll discuss the component API in more detail at the end of this chapter. For now, just mediate on the configuration options available when defining a React component.
+Notice that `Timer` is capitalized. When creating custom React components you need to capitalize the name of the component. Additionally, the value `this` among the configuration options refers to the component instance created. We'll discuss the component API in more detail at the end of this chapter. For now, just mediate on the configuration options available when defining a React component and a reference to the componet being created is achevied using the `this` keyword.
 
 #### Notes
 
