--- a/basic-react-components/6.3.md
+++ b/basic-react-components/6.3.md
@@ -4,7 +4,7 @@ The `render` configuration value defined when creating a component should return
 
 > [source code](https://jsfiddle.net/fv26rjdL/#tabs=js,result,html,resources)
 
-Note that if you want to return React nodes on more than one line (taking advantage of whitespace) you will have to surround the returned value in `()`.
+Note that if you want to return React nodes on more than one line (taking advantage of whitespace) you will have to surround the returned value in `()`. In the code below the JSX defining (i.e. rendered) the `MyComponent` is returned in `()`.
 
 > [source code](https://jsfiddle.net/e2awasnk/#tabs=js,result,html,resources)
 
