--- a/basic-react-components/6.4.md
+++ b/basic-react-components/6.4.md
@@ -1,6 +1,6 @@
 # Creating Stateless Function Components
 
-When a component is purely a result of `props` alone the component can be written as a pure function avoiding the need to create a React component instance.
+When a component is purely a result of `props` alone, no `state`, the component can be written as a pure function avoiding the need to create a React component instance.
 
 > [source code](https://jsfiddle.net/5nzpxyuu/#tabs=js,result,html,resources)
 
