--- a/react-props/7.3.md
+++ b/react-props/7.3.md
@@ -1,6 +1,6 @@
 # Getting Component Props
 
-As discussed in section 6.5 a component instance can be accessed from within the component from any configuration function cope by using the `this` keyword. For example, in the code below the `this` keyword is used to access the `Badge` `props` from the component `render` configuration function (i.e. `this.props.name`).
+As discussed in section 6.5 a component instance can be accessed from within the component from any configuration function scope by using the `this` keyword. For example, in the code below the `this` keyword is used to access the `Badge` `props` from the component `render` configuration function (i.e. `this.props.name`).
 
 ```
 var Badge = React.createClass({
@@ -11,3 +11,23 @@ var Badge = React.createClass({
 
 ReactDOM.render(<Badge name="Bill" />, document.getElementById('app'));
 ```
+
+Nothing that difficult to grasp is happening if you look at the transformed JavaScript (i.e. JSX to JS)
+
+```
+var Badge = React.createClass({
+	displayName: "Badge",
+
+	render: function render() {
+		return React.createElement(
+			"div",
+			null,
+			this.props.name
+		);
+	}
+});
+
+ReactDOM.render(React.createElement(Badge, { name: "Bill" }), document.getElementById('app'));
+```
+
+The `{ name: "Bill" }` object is sent to the `createElement()` function along with a reference to the `Badge` component. The value, `{ name: "Bill" }` is set as an instance property value of the component accessbile from the `props` property (ie. `this.props.name === "Bill"`).
