--- a/react-props/7.1.md
+++ b/react-props/7.1.md
@@ -43,4 +43,4 @@ In the code example examined in this section the `BadgeList` component uses two 
 
 > [source code](https://jsfiddle.net/codylindley/Lv1zaudj/2/#tabs=js,result,html,resources)
 
-Basically every React component has a unique instance property call `props` that starts as an empty JavaScript object. The empty object can get filled with any JavaScript values that an object can hold.
+Basically every React component instance has a unique instance property call `props` that starts as an empty JavaScript object. The empty object can get filled with any JavaScript values that an object can hold. In other words, not just strings, but any JavaScript value.
