--- a/react-props/7.3.md
+++ b/react-props/7.3.md
@@ -1,6 +1,6 @@
 # Getting Component Props
 
-As discussed in section 6.5 a component instance can be accessed from within the component from any configuration function scope by using the `this` keyword. For example, in the code below the `this` keyword is used to access the `Badge` `props` from the component `render` configuration function (i.e. `this.props.name`).
+As discussed in section 6.5 a component instance can be accessed from any configuration option that uses a  function by way of the `this` keyword. For example, in the code below the `this` keyword is used to access the `Badge` `props` from the component `render` configuration option (i.e. `this.props.name`).
 
 ```
 var Badge = React.createClass({
