--- a/react-props/7.6.md
+++ b/react-props/7.6.md
@@ -1,3 +1,59 @@
 # Validating Component Props
 
-To force proper usage of a component it's possible to not only set default values for props but also validate the props themselves for use by the component.
+To enforce the proper usage of a prop within a component props can be validated when component instances are created.
+
+When defining a component the `propTypes` configuration option can be used to identify if and how props should be validated. In the code example below I'm check to see that the `propArray` and `propObject` are in fact the correct data type and sent in to the component when it is instantiated.
+
+> [source code](https://jsfiddle.net/jxbdodh8/#tabs=js,result,html,resources)
+
+I am not sending the correct props as specified using `propTypes` to demonstrate that doing so will cause an error. The above code will result in the following error showing up in the console.
+
+```
+Warning: Failed propType: Invalid prop `propArray` of type `object` supplied to `MyComponent`, expected `array`
+
+Warning: Failed propType: Invalid prop `propFunc` of type `number` supplied to `MyComponent`, expected `function`
+
+Uncaught TypeError: this.props.propFunc is not a function
+```
+
+React offers several built in validators (e.g.` React.PropTypes[VALIDATOR]`) which I outline below and the ability to create custom prop validators.
+
+###Basic type validation:
+
+These validators check to see if the prop is a specific JS primitive. By default all these are optional. In other words, the validation only occurs if the prop is set.
+
+<table>
+  <tr>
+    <td>React.PropTypes.string</td>
+    <td>If prop is used, verify it is a string</td>
+  </tr>
+  <tr>
+	<td>React.PropTypes.bool</td>
+	<td>If prop is used, verify it is a boolean</td>
+  </tr>
+  <tr>
+    <td>React.PropTypes.func</td>
+    <td>If prop is used, verify it is a function</td>
+  </tr>
+  <tr>
+	<td>React.PropTypes.number</td>
+	<td>If prop is used, verify it is a number</td>
+  </tr>
+  <tr>
+    <td>React.PropTypes.object</td>
+    <td>If prop is used, verify it is a object</td>
+  </tr>
+  <tr>
+	<td>React.PropTypes.array</td>
+	<td>If prop is used, verify it is a array</td>
+  </tr>
+</table>
+
+###Required type validation:
+
+<table>
+  <tr>
+    <td>React.PropTypes.[TYPE].isRequired]</td>
+    <td>Chaing the .isRequired on to any type validation to make sure the prop is provided (e.g. `propTypes:{propFunc:React.PropTypes.func.isRequired}` )</td>
+  </tr>
+</table>
