--- a/react-props/7.5.md
+++ b/react-props/7.5.md
@@ -2,6 +2,8 @@
 
 Before looking at validating props one needs to make sure they understand that a component prop can be any valid JavaScript value.
 
-In the code example below I setup several props containing several different JavaScript values.
+In the code example below I setup several default props containing several different JavaScript values.
 
 > [source code](https://jsfiddle.net/u02vckfd/#tabs=js,result,html,resources)
+
+Note how the  `propArray` and `propObject` were overwritten with new values when the `MyComponent` instance is created.
