--- a/react-props/7.6.md
+++ b/react-props/7.6.md
@@ -11,49 +11,118 @@ I am not sending the correct props as specified using `propTypes` to demonstrate
 ```
 Warning: Failed propType: Invalid prop `propArray` of type `object` supplied to `MyComponent`, expected `array`
 
-Warning: Failed propType: Invalid prop `propFunc` of type `number` supplied to `MyComponent`, expected `function`
+Warning: Failed propType: Required prop `propFunc` was not specified in `MyComponent`.
 
 Uncaught TypeError: this.props.propFunc is not a function
 ```
 
 React offers several built in validators (e.g.` React.PropTypes[VALIDATOR]`) which I outline below and the ability to create custom prop validators.
 
-###Basic type validation:
+####Basic type validators:
 
 These validators check to see if the prop is a specific JS primitive. By default all these are optional. In other words, the validation only occurs if the prop is set.
 
 <table>
   <tr>
-    <td>React.PropTypes.string</td>
+    <td><code>React.PropTypes.string</code></td>
     <td>If prop is used, verify it is a string</td>
   </tr>
   <tr>
-	<td>React.PropTypes.bool</td>
+	<td><code>React.PropTypes.bool</code></td>
 	<td>If prop is used, verify it is a boolean</td>
   </tr>
   <tr>
-    <td>React.PropTypes.func</td>
+    <td><code>React.PropTypes.func</code></td>
     <td>If prop is used, verify it is a function</td>
   </tr>
   <tr>
-	<td>React.PropTypes.number</td>
+	<td><code>React.PropTypes.number</code></td>
 	<td>If prop is used, verify it is a number</td>
   </tr>
   <tr>
-    <td>React.PropTypes.object</td>
+    <td><code>React.PropTypes.object</code></td>
     <td>If prop is used, verify it is a object</td>
   </tr>
   <tr>
-	<td>React.PropTypes.array</td>
+	<td><code>React.PropTypes.array</code></td>
 	<td>If prop is used, verify it is a array</td>
   </tr>
 </table>
 
-###Required type validation:
+####Required type validators:
 
 <table>
   <tr>
-    <td>React.PropTypes.[TYPE].isRequired]</td>
-    <td>Chaing the .isRequired on to any type validation to make sure the prop is provided (e.g. `propTypes:{propFunc:React.PropTypes.func.isRequired}` )</td>
+    <td><code>React.PropTypes.[TYPE].isRequired</code></td>
+    <td>Chaining the <code>.isRequired</code> on to any type validation to make sure the prop is provided (e.g. <code>propTypes:{propFunc:React.PropTypes.func.isRequired}</code> )</td>
+  </tr>
+</table>
+
+####Element validators:
+
+<table>
+  <tr>
+    <td><code>React.PropTypes.element</code></td>
+    <td>Is a React element.</td>
+  </tr>
+  <tr>
+    <td><code>React.PropTypes.node</code></td>
+    <td>Is anything that can be rendered: numbers, strings, elements or an array
+    (or fragment) containing these types.</td>
+  </tr>
+</table>
+
+####Enumerables validators:
+
+<table>
+  <tr>
+    <td><code>React.PropTypes.oneOf(['Mon','Fri'])</code></td>
+    <td>Is one of several types of specific values.</td>
+  </tr>
+  <tr>
+    <td><code>React.PropTypes.oneOfType([React.PropTypes.string,React.PropTypes.number])</code></td>
+    <td>Is an object that could be one of many types</td>
+  </tr>
+</table>
+
+####Array and Object validators:
+
+<table>
+  <tr>
+    <td><code>React.PropTypes.arrayOf(React.PropTypes.number),</code></td>
+    <td>Is an array containing only one type of values.</td>
+  </tr>
+  <tr>
+    <td><code>React.PropTypes.objectOf(React.PropTypes.number)</code></td>
+    <td>Is an object containing only one type of property values</td>
+  </tr>
+  <tr>
+    <td><code>React.PropTypes.instanceOf(People)</code></td>
+    <td>Is object instance of specific constructor(uses `instanceof`)</td>
+  </tr>
+  <tr>
+    <td><code>React.PropTypes.instanceOf(People)</code></td>
+    <td>Is object instance of specific constructor(uses `instanceof`)</td>
+  </tr>
+  <tr>
+    <td><code>React.PropTypes.shape({color:React.PropTypes.string,size:   React.PropTypes.number})</code></td>
+    <td>Is object with properties having a specific type</td>
+  </tr>
+</table>
+
+####Custom validators:
+
+<table>
+  <tr>
+    <td><code>function(props, propName, componentName){}</code></td>
+    <td>Supply your own function. For example: <pre><code>
+	propTypes: {
+	  customProp: function(props, propName, componentName) {
+	    if (!/matchme/.test(props[propName])) {
+	      return new Error('Validation failed!');
+	    }
+	  }
+	}
+	</code></pre></td>
   </tr>
 </table>
