--- a/react-props/7.6.md
+++ b/react-props/7.6.md
@@ -2,7 +2,7 @@
 
 To enforce the proper usage of a prop within a component props can be validated when component instances are created.
 
-When defining a component the `propTypes` configuration option can be used to identify if and how props should be validated. In the code example below I'm check to see that the `propArray` and `propObject` are in fact the correct data type and sent in to the component when it is instantiated.
+When defining a component the `propTypes` configuration option can be used to identify if and how props should be validated. In the code example below I'm check to see that the `propArray` and `propObject` are in fact the correct data type and sent into the component when it is instantiated.
 
 > [source code](https://jsfiddle.net/jxbdodh8/#tabs=js,result,html,resources)
 
@@ -46,6 +46,10 @@ These validators check to see if the prop is a specific JS primitive. By default
   <tr>
 	<td><code>React.PropTypes.array</code></td>
 	<td>If prop is used, verify it is a array</td>
+  </tr>
+  <tr>
+	<td><code>React.PropTypes.any</code></td>
+	<td>If prop is used, verify it is of any type</td>
   </tr>
 </table>
 
@@ -101,12 +105,8 @@ These validators check to see if the prop is a specific JS primitive. By default
     <td>Is object instance of specific constructor(uses `instanceof`)</td>
   </tr>
   <tr>
-    <td><code>React.PropTypes.instanceOf(People)</code></td>
-    <td>Is object instance of specific constructor(uses `instanceof`)</td>
-  </tr>
-  <tr>
     <td><code>React.PropTypes.shape({color:React.PropTypes.string,size:   React.PropTypes.number})</code></td>
-    <td>Is object with properties having a specific type</td>
+    <td>Is object containing properties having a specific type</td>
   </tr>
 </table>
 
