--- a/basic-react-components/6.7.md
+++ b/basic-react-components/6.7.md
@@ -8,4 +8,4 @@ In the code below the `BadgeList` component contains/owns the `BadgeBill` and `B
 
 ### Notes
 
-* This code was purposefully simplistic in order to demonstrate component composition. In the next chapter will look at how this code in this section almost always is written using props to create a generic Badge component that take any name value.
+* This code was purposefully simplistic in order to demonstrate component composition. In the next chapter will look at how the code in this section will almost always be written using props to create a generic Badge component that take any name value.
