--- a/react-nodes/4.7.md
+++ b/react-nodes/4.7.md
@@ -1,1 +1,145 @@
 # Defining React Node Events
+
+Events can be added to React nodes much like events can be added to DOM nodes. In the code example below I am adding a very simple click and mouse over event to a `<div>` React node.
+
+> [source code](https://jsfiddle.net/ct5acw2y/#tabs=js,result,html,resources)
+
+React supports the following events that can be defined as properties of the `React.createElement()` props argument.
+
+<table
+<tr>
+<th>Event Type:</th>
+<th>Events:</th>
+<th>Properties:</th>
+</tr>
+  <tr>
+  	<td>Clipboard</td>
+    <td><code>onCopy onCut onPaste</code></td>
+	<td><code>DOMDataTransfer clipboardData</code></td>
+  </tr>
+  <tr>
+  	<td>Composition</td>
+    <td><code>onCompositionEnd onCompositionStart onCompositionUpdate</code></td>
+	<td><code>string data</code></td>
+  </tr>
+  <tr>
+  	<td>Keyboard</td>
+    <td><code>onKeyDown onKeyPress onKeyUp</code></td>
+	<td><pre><code>boolean altKey
+number charCode
+boolean ctrlKey
+boolean getModifierState(key)
+string key
+number keyCode
+string locale
+number location
+boolean metaKey
+boolean repeat
+boolean shiftKey
+number which</code></pre></td>
+  </tr>
+  <tr>
+	  <td>Focus</td>
+	<td><code>onChange onInput onSubmit</code></td>
+  <td><code>DOMEventTarget relatedTarget</code></td>
+  </tr>
+  <tr>
+	<td>Form</td>
+  <td><code>onFocus onBlur</code></td>
+  <td></td>
+  </tr>
+  <tr>
+	<td>Mouse</td>
+  <td><code>onClick onContextMenu onDoubleClick onDrag onDragEnd onDragEnter onDragExit
+onDragLeave onDragOver onDragStart onDrop onMouseDown onMouseEnter onMouseLeave
+onMouseMove onMouseOut onMouseOver onMouseUp</code></td>
+  <td><pre><code>boolean altKey
+number button
+number buttons
+number clientX
+number clientY
+boolean ctrlKey
+boolean getModifierState(key)
+boolean metaKey
+number pageX
+number pageY
+DOMEventTarget relatedTarget
+number screenX
+number screenY
+boolean shiftKey
+  </code></pre></td>
+  </tr>
+  <tr>
+  <td>Selection</td>
+  <td><code>onSelect</code></td>
+  <td></td>
+  </tr>
+  <tr>
+  <td>Touch</td>
+  <td><code>onTouchCancel onTouchEnd onTouchMove onTouchStart</code></td>
+  <td><pre><code>
+  boolean altKey
+  DOMTouchList changedTouches
+  boolean ctrlKey
+  boolean getModifierState(key)
+  boolean metaKey
+  boolean shiftKey
+  DOMTouchList targetTouches
+  DOMTouchList touches
+  </code></pre></td>
+  </tr>
+  <tr>
+  <td>UI</td>
+  <td><code>onScroll</code></td>
+  <td><pre><code>
+  number detail
+  DOMAbstractView view
+  </code></pre></td>
+  </tr>
+  <tr>
+  <td>Wheel</td>
+  <td><code>onWheel</code></td>
+  <td><pre><code>
+  number deltaMode
+  number deltaX
+  number deltaY
+  number deltaZ
+  </code></pre></td>
+  </tr>
+
+  <tr>
+  <td>Media</td>
+  <td><code>onAbort onCanPlay onCanPlayThrough onDurationChange onEmptied onEncrypted onEnded onError onLoadedData onLoadedMetadata onLoadStart onPause onPlay onPlaying onProgress onRateChange onSeeked onSeeking onStalled onSuspend onTimeUpdate onVolumeChange onWaiting</code></td>
+  <td></td>
+  </tr>
+
+  <tr>
+  <td>Image</td>
+  <td><code>onLoad onError</code></td>
+  <td></td>
+  </tr>
+
+  <tr>
+  <td>Animation</td>
+  <td><code>onAnimationStart onAnimationEnd onAnimationIteration</code></td>
+  <td><pre><code>
+  string animationName
+  string pseudoElement
+  float elapsedTime
+  </code></pre></td>
+  </tr>
+
+  <tr>
+  <td>Transition</td>
+  <td><code>onTransitionEnd</code></td>
+  <td><pre><code>
+  string propertyName
+  string pseudoElement
+  float elapsedTime
+  </code></pre></td>
+  </tr>
+
+</table>
+
+
+when creating a React node Events can be added to React nodes  via props. When
