--- a/react-nodes/4.1.md
+++ b/react-nodes/4.1.md
@@ -6,6 +6,6 @@ The primary type or value that is created when using React is what is known as a
 
 React nodes are thus, not [real DOM nodes](http://domenlightenment.com/#1) (e.g., [text](http://domenlightenment.com/#7) or [element](http://domenlightenment.com/#3) nodes) themselves, but a representation of a potential DOM node. The representation is considered the virtual DOM. In a nutshell, React is used to define a virtual DOM using React nodes, that fuel React components, that can eventually be used to create a real DOM structured or other structures (e.g., [React Native](https://facebook.github.io/react-native/)).
 
-React nodes can be created using JSX or JavaScript. In this chapter we'll look at creating React nodes using JavaScript only.
+React nodes can be created using JSX or JavaScript. In this chapter we'll look at creating React nodes using JavaScript (i.e. no JSX, not yet).
 
 You might be tempted to skip this chapter because you already know that you will be using JSX. I'd suggest reading this chapter so you are aware of what JSX is doing for you. This is likely the most important chapter in the book.
