--- a/react-props/7.2.md
+++ b/react-props/7.2.md
@@ -35,4 +35,4 @@ ReactDOM.render(<BadgeList />, document.getElementById('app'));
 
 #### Notes
 
-* A components properties should be consider immutable and components should not alter internally the properties sent to them from above. If you need to alter the properties of a component then a re-render should occur, don't set props by adding/updating them using `this.props.[PROP]`.
+* A components properties should be consider immutable and components should not alter internally the properties sent to them from above. If you need to alter the properties of a component then a re-render should occur, don't set props by adding/updating them using `this.props.[PROP] = [NEW PROP]`.
