--- a/react-nodes/4.7.md
+++ b/react-nodes/4.7.md
@@ -1,8 +1,33 @@
 # Defining React Node Events
 
-Events can be added to React nodes much like events can be added to DOM nodes. In the code example below I am adding a very simple click and mouseover event to a `<div>` React node.
+Events can be added to React nodes much like events can be added to DOM nodes. In the code example below I am adding a very simple `click` and `mouseover` event to a React `<div>` node.
 
 > [source code](https://jsfiddle.net/ct5acw2y/#tabs=js,result,html,resources)
+
+Note how the property name for an event in React starts with 'on'.
+
+React creates what it calls a `SyntheticEvent` for each event containing the details for the event. Similar to the details that are define for DOM events. The `SyntheticEvent` instance, for an event, is passed into the events handlers/callback functions. In the code below I am logging the details of a SyntheticEvent instance.
+
+> [source code](https://jsfiddle.net/9yn5qtxu/#tabs=js,result,html,resources)
+
+Every syntheticEvent object instance has the following properties.
+
+```
+boolean bubbles
+boolean cancelable
+DOMEventTarget currentTarget
+boolean defaultPrevented
+number eventPhase
+boolean isTrusted
+DOMEvent nativeEvent
+void preventDefault()
+boolean isDefaultPrevented()
+void stopPropagation()
+boolean isPropagationStopped()
+DOMEventTarget target
+number timeStamp
+string type
+```
 
 React supports the following events that can be defined as properties of the `React.createElement()` props argument.
 
@@ -142,4 +167,9 @@ boolean shiftKey
 </table>
 
 
-when creating a React node Events can be added to React nodes  via props. When
+#### Notes
+
+* React normalizes events so that they behave consistently across different browsers.
+* Events in React are triggered on the Bubbling phase. To trigger an event on the capturing phase add the word "Capture" to the event name (e.g. `onClick` would become `onClickCapture`).
+* If you need the browser event details you can access this by using the `nativeEvent` property found in the SyntheticEvent object passed into React event hander/callback.
+* 
