--- a/react-nodes/4.7.md
+++ b/react-nodes/4.7.md
@@ -29,13 +29,13 @@ number timeStamp
 string type
 ```
 
-React supports the following events that can be defined as properties of the `React.createElement()` props argument.
+React supports the following events:
 
 <table
 <tr>
-<th>Event Type:</th>
+<th>Event Type/Category:</th>
 <th>Events:</th>
-<th>Properties:</th>
+<th>Event Specific Properties:</th>
 </tr>
   <tr>
   	<td>Clipboard</td>
@@ -170,6 +170,7 @@ boolean shiftKey
 #### Notes
 
 * React normalizes events so that they behave consistently across different browsers.
-* Events in React are triggered on the Bubbling phase. To trigger an event on the capturing phase add the word "Capture" to the event name (e.g. `onClick` would become `onClickCapture`).
+* Events in React are triggered on the bubbling phase. To trigger an event on the capturing phase add the word "Capture" to the event name (e.g. `onClick` would become `onClickCapture`).
 * If you need the browser event details you can access this by using the `nativeEvent` property found in the SyntheticEvent object passed into React event hander/callback.
-* 
+* React does not actually attach events to the to the nodes themselves, it uses [event delegation](http://domenlightenment.com/#11.14).
+* `e.stopPropagation()` or `e.preventDefault()` should be triggered manually to [stop](http://domenlightenment.com/#11.9) event [propagation](http://domenlightenment.com/#11.10).
