--- a/react-jsx/5.8.md
+++ b/react-jsx/5.8.md
@@ -1,1 +1,11 @@
 # Defining Events in JSX
+
+In the last chapter, in section 4.7, it was explained and demonstrated how events are defined on React nodes. To do the same thing in JSX you add the event and the reference to the handler/callback as a prop/attribute of the JSX representing the React node.
+
+Below is the none JSX way of adding an event to a React node (example from section 4.7).
+
+> [source code](https://jsfiddle.net/ct5acw2y/#tabs=js,result,html,resources)
+
+Using JSX defining an event for a React node based on the above could would look like this:
+
+> [source code](https://jsfiddle.net/tvmqwuu1/#tabs=js,result,html,resources)
