--- a/react-jsx/5.8.md
+++ b/react-jsx/5.8.md
@@ -2,10 +2,156 @@
 
 In the last chapter, in section 4.7, it was explained and demonstrated how events are defined on React nodes. To do the same thing in JSX you add the event and the reference to the handler/callback as a prop/attribute of the JSX representing the React node.
 
-Below is the none JSX way of adding an event to a React node (example from section 4.7).
+Below is the none JSX way of adding an event to a React node (example from section 4.7):
 
 > [source code](https://jsfiddle.net/ct5acw2y/#tabs=js,result,html,resources)
 
-Using JSX defining an event for a React node based on the above could would look like this:
+Using JSX adding an event to a React node look like this (based on the above code):
 
 > [source code](https://jsfiddle.net/tvmqwuu1/#tabs=js,result,html,resources)
+
+React supports the following events:
+
+<table
+<tr>
+<th>Event Type/Category:</th>
+<th>Events:</th>
+<th>Event Specific Properties:</th>
+</tr>
+  <tr>
+  	<td>Clipboard</td>
+    <td><code>onCopy onCut onPaste</code></td>
+	<td><code>DOMDataTransfer clipboardData</code></td>
+  </tr>
+  <tr>
+  	<td>Composition</td>
+    <td><code>onCompositionEnd onCompositionStart onCompositionUpdate</code></td>
+	<td><code>string data</code></td>
+  </tr>
+  <tr>
+  	<td>Keyboard</td>
+    <td><code>onKeyDown onKeyPress onKeyUp</code></td>
+	<td><pre><code>boolean altKey
+number charCode
+boolean ctrlKey
+boolean getModifierState(key)
+string key
+number keyCode
+string locale
+number location
+boolean metaKey
+boolean repeat
+boolean shiftKey
+number which</code></pre></td>
+  </tr>
+  <tr>
+	  <td>Focus</td>
+	<td><code>onChange onInput onSubmit</code></td>
+  <td><code>DOMEventTarget relatedTarget</code></td>
+  </tr>
+  <tr>
+	<td>Form</td>
+  <td><code>onFocus onBlur</code></td>
+  <td></td>
+  </tr>
+  <tr>
+	<td>Mouse</td>
+  <td><code>onClick onContextMenu onDoubleClick onDrag onDragEnd onDragEnter onDragExit
+onDragLeave onDragOver onDragStart onDrop onMouseDown onMouseEnter onMouseLeave
+onMouseMove onMouseOut onMouseOver onMouseUp</code></td>
+  <td><pre><code>boolean altKey
+number button
+number buttons
+number clientX
+number clientY
+boolean ctrlKey
+boolean getModifierState(key)
+boolean metaKey
+number pageX
+number pageY
+DOMEventTarget relatedTarget
+number screenX
+number screenY
+boolean shiftKey
+  </code></pre></td>
+  </tr>
+  <tr>
+  <td>Selection</td>
+  <td><code>onSelect</code></td>
+  <td></td>
+  </tr>
+  <tr>
+  <td>Touch</td>
+  <td><code>onTouchCancel onTouchEnd onTouchMove onTouchStart</code></td>
+  <td><pre><code>
+  boolean altKey
+  DOMTouchList changedTouches
+  boolean ctrlKey
+  boolean getModifierState(key)
+  boolean metaKey
+  boolean shiftKey
+  DOMTouchList targetTouches
+  DOMTouchList touches
+  </code></pre></td>
+  </tr>
+  <tr>
+  <td>UI</td>
+  <td><code>onScroll</code></td>
+  <td><pre><code>
+  number detail
+  DOMAbstractView view
+  </code></pre></td>
+  </tr>
+  <tr>
+  <td>Wheel</td>
+  <td><code>onWheel</code></td>
+  <td><pre><code>
+  number deltaMode
+  number deltaX
+  number deltaY
+  number deltaZ
+  </code></pre></td>
+  </tr>
+
+  <tr>
+  <td>Media</td>
+  <td><code>onAbort onCanPlay onCanPlayThrough onDurationChange onEmptied onEncrypted onEnded onError onLoadedData onLoadedMetadata onLoadStart onPause onPlay onPlaying onProgress onRateChange onSeeked onSeeking onStalled onSuspend onTimeUpdate onVolumeChange onWaiting</code></td>
+  <td></td>
+  </tr>
+
+  <tr>
+  <td>Image</td>
+  <td><code>onLoad onError</code></td>
+  <td></td>
+  </tr>
+
+  <tr>
+  <td>Animation</td>
+  <td><code>onAnimationStart onAnimationEnd onAnimationIteration</code></td>
+  <td><pre><code>
+  string animationName
+  string pseudoElement
+  float elapsedTime
+  </code></pre></td>
+  </tr>
+
+  <tr>
+  <td>Transition</td>
+  <td><code>onTransitionEnd</code></td>
+  <td><pre><code>
+  string propertyName
+  string pseudoElement
+  float elapsedTime
+  </code></pre></td>
+  </tr>
+
+</table>
+
+
+#### Notes
+
+* React normalizes events so that they behave consistently across different browsers.
+* Events in React are triggered on the bubbling phase. To trigger an event on the capturing phase add the word "Capture" to the event name (e.g. `onClick` would become `onClickCapture`).
+* If you need the browser event details you can access this by using the `nativeEvent` property found in the SyntheticEvent object passed into React event hander/callback.
+* React does not actually attach events to the to the nodes themselves, it uses [event delegation](http://domenlightenment.com/#11.14).
+* `e.stopPropagation()` or `e.preventDefault()` should be triggered manually to [stop](http://domenlightenment.com/#11.9) event [propagation](http://domenlightenment.com/#11.10).
