--- a/react-nodes/4.7.md
+++ b/react-nodes/4.7.md
@@ -6,7 +6,7 @@ Events can be added to React nodes much like events can be added to DOM nodes. I
 
 Note how the property name for an event in React starts with 'on'.
 
-React creates what it calls a `SyntheticEvent` for each event containing the details for the event. Similar to the details that are define for DOM events. The `SyntheticEvent` instance, for an event, is passed into the events handlers/callback functions. In the code below I am logging the details of a SyntheticEvent instance.
+React creates what it calls a `SyntheticEvent` for each event, which contains the details for the event. Similar to the details that are define for DOM events. The `SyntheticEvent` instance, for an event, is passed into the events handlers/callback functions. In the code below I am logging the details of a SyntheticEvent instance.
 
 > [source code](https://jsfiddle.net/9yn5qtxu/#tabs=js,result,html,resources)
 
@@ -28,6 +28,27 @@ DOMEventTarget target
 number timeStamp
 string type
 ```
+
+Additionally properties are available depending upon the type/category of event that is used. For example the `onCick` syntheticEvent event also contains the following properties.
+
+```
+boolean altKey
+number button
+number buttons
+number clientX
+number clientY
+boolean ctrlKey
+boolean getModifierState(key)
+boolean metaKey
+number pageX
+number pageY
+DOMEventTarget relatedTarget
+number screenX
+number screenY
+boolean shiftKey
+```
+
+The table below outlines the unique syntheticEvent properties for each type/category of events.
 
 React supports the following events:
 
@@ -173,4 +194,4 @@ boolean shiftKey
 * Events in React are triggered on the bubbling phase. To trigger an event on the capturing phase add the word "Capture" to the event name (e.g. `onClick` would become `onClickCapture`).
 * If you need the browser event details you can access this by using the `nativeEvent` property found in the SyntheticEvent object passed into React event hander/callback.
 * React does not actually attach events to the to the nodes themselves, it uses [event delegation](http://domenlightenment.com/#11.14).
-* `e.stopPropagation()` or `e.preventDefault()` should be triggered manually to [stop](http://domenlightenment.com/#11.9) event [propagation](http://domenlightenment.com/#11.10).
+* `e.stopPropagation()` or `e.preventDefault()` should be triggered manually to [stop](http://domenlightenment.com/#11.9) event [propagation](http://domenlightenment.com/#11.10) instead of `returning false;`.
