--- a/react-jsx/5.8.md
+++ b/react-jsx/5.8.md
@@ -1,16 +1,18 @@
 # Defining Events in JSX
 
-In the last chapter, in section 4.7, it was explained and demonstrated how events are defined on React nodes. To do the same thing in JSX you add the event and the reference to the handler/callback as a prop/attribute of the JSX representing the React node.
+In the last chapter, in section 4.7, it was explained and demonstrated how events are defined on React nodes. To do the same thing in JSX you add the same camelCased event and the corresponding handler/callback as a prop/attribute of the JSX representing the React node.
 
-Below is the none JSX way of adding an event to a React node (example from section 4.7):
+Below is the none JSX way of adding an event to a React node (example from Previous chapter, section 4.7):
 
 > [source code](https://jsfiddle.net/ct5acw2y/#tabs=js,result,html,resources)
 
-Using JSX adding an event to a React node look like this (based on the above code):
+The above code written using JSX:
 
 > [source code](https://jsfiddle.net/tvmqwuu1/#tabs=js,result,html,resources)
 
-React supports the following events:
+Note that we are using the `{ }` brackets to connect a JS function to an event. This style of adding events to nodes is mimics the [DOM 0 style of inlining events on HTML elements](http://stackoverflow.com/questions/5642659/what-is-the-difference-between-dom-level-0-events-vs-dom-level-2-events).
+
+React supports the following events and event specific syntheticEvent properties:
 
 <table
 <tr>
@@ -152,6 +154,6 @@ boolean shiftKey
 
 * React normalizes events so that they behave consistently across different browsers.
 * Events in React are triggered on the bubbling phase. To trigger an event on the capturing phase add the word "Capture" to the event name (e.g. `onClick` would become `onClickCapture`).
-* If you need the browser event details you can access this by using the `nativeEvent` property found in the SyntheticEvent object passed into React event hander/callback.
-* React does not actually attach events to the to the nodes themselves, it uses [event delegation](http://domenlightenment.com/#11.14).
-* `e.stopPropagation()` or `e.preventDefault()` should be triggered manually to [stop](http://domenlightenment.com/#11.9) event [propagation](http://domenlightenment.com/#11.10).
+* If you need the browser event details for a given event you can access this by using the `nativeEvent` property found in the SyntheticEvent object passed into React event hander/callbacks.
+* React does not actually attach events to the nodes themselves, it uses [event delegation](http://domenlightenment.com/#11.14).
+* `e.stopPropagation()` or `e.preventDefault()` should be triggered manually to [stop](http://domenlightenment.com/#11.9) event [propagation](http://domenlightenment.com/#11.10) instead of `returning false;`.
