--- a/react-jsx/5.8.md
+++ b/react-jsx/5.8.md
@@ -10,7 +10,7 @@ The above code written using JSX:
 
 > [source code](https://jsfiddle.net/tvmqwuu1/#tabs=js,result,html,resources)
 
-Note that we are using the `{ }` brackets to connect a JS function to an event. This style of adding events to nodes is mimics the [DOM 0 style of inlining events on HTML elements](http://stackoverflow.com/questions/5642659/what-is-the-difference-between-dom-level-0-events-vs-dom-level-2-events).
+Note that we are using the `{ }` brackets to connect a JS function to an event (i.e. `onMouseOver={mouseOverHandler}`). This style of adding events to nodes mimics the [DOM 0 style of inlining events on HTML elements](http://stackoverflow.com/questions/5642659/what-is-the-difference-between-dom-level-0-events-vs-dom-level-2-events).
 
 React supports the following events and event specific syntheticEvent properties:
 
@@ -157,3 +157,4 @@ boolean shiftKey
 * If you need the browser event details for a given event you can access this by using the `nativeEvent` property found in the SyntheticEvent object passed into React event hander/callbacks.
 * React does not actually attach events to the nodes themselves, it uses [event delegation](http://domenlightenment.com/#11.14).
 * `e.stopPropagation()` or `e.preventDefault()` should be triggered manually to [stop](http://domenlightenment.com/#11.9) event [propagation](http://domenlightenment.com/#11.10) instead of `returning false;`.
+* Not all DOM events are provided by React. But you can still make use of them [using React lifecycle methods](https://facebook.github.io/react/tips/dom-event-listeners.html).
