--- a/basic-react-components/6.6.md
+++ b/basic-react-components/6.6.md
@@ -1,1 +1,160 @@
 # Defining Events on Components
+
+To define events on components, events and event handlers/callbacks (discussed in Ch. 4 - 4.7 and Ch. 5 - 5.8) can be added to React nodes inside of a components render configuration option.
+
+In the code example, events are set on React nodes (via JSX) using what looks like component props.
+
+> [source code](https://jsfiddle.net/sjL64ogk/#tabs=js,result,html,resources)
+
+Basically, React when rendering a component looks for special React prop events (e.g. `onClick`) and treats these props differently from other props (all react events shown in table below). Obviously the difference being, that eventing is being wired up behind the scenes.
+
+Part of this wiring is auto binding the context of the handler/callback to the scope of the component instance. In the code example below the value of this inside of the handlers/callbacks will reference the component instance itself.
+
+> [source code](https://jsfiddle.net/gke6vmc9/#tabs=js,result,html,resources)
+
+React supports the following events and event specific syntheticEvent properties:
+
+<table
+<tr>
+<th>Event Type/Category:</th>
+<th>Events:</th>
+<th>Event Specific Properties:</th>
+</tr>
+  <tr>
+  	<td>Clipboard</td>
+    <td><code>onCopy onCut onPaste</code></td>
+	<td><code>DOMDataTransfer clipboardData</code></td>
+  </tr>
+  <tr>
+  	<td>Composition</td>
+    <td><code>onCompositionEnd onCompositionStart onCompositionUpdate</code></td>
+	<td><code>string data</code></td>
+  </tr>
+  <tr>
+  	<td>Keyboard</td>
+    <td><code>onKeyDown onKeyPress onKeyUp</code></td>
+	<td><pre><code>boolean altKey
+number charCode
+boolean ctrlKey
+boolean getModifierState(key)
+string key
+number keyCode
+string locale
+number location
+boolean metaKey
+boolean repeat
+boolean shiftKey
+number which</code></pre></td>
+  </tr>
+  <tr>
+	  <td>Focus</td>
+	<td><code>onChange onInput onSubmit</code></td>
+  <td><code>DOMEventTarget relatedTarget</code></td>
+  </tr>
+  <tr>
+	<td>Form</td>
+  <td><code>onFocus onBlur</code></td>
+  <td></td>
+  </tr>
+  <tr>
+	<td>Mouse</td>
+  <td><code>onClick onContextMenu onDoubleClick onDrag onDragEnd onDragEnter onDragExit
+onDragLeave onDragOver onDragStart onDrop onMouseDown onMouseEnter onMouseLeave
+onMouseMove onMouseOut onMouseOver onMouseUp</code></td>
+  <td><pre><code>boolean altKey
+number button
+number buttons
+number clientX
+number clientY
+boolean ctrlKey
+boolean getModifierState(key)
+boolean metaKey
+number pageX
+number pageY
+DOMEventTarget relatedTarget
+number screenX
+number screenY
+boolean shiftKey
+  </code></pre></td>
+  </tr>
+  <tr>
+  <td>Selection</td>
+  <td><code>onSelect</code></td>
+  <td></td>
+  </tr>
+  <tr>
+  <td>Touch</td>
+  <td><code>onTouchCancel onTouchEnd onTouchMove onTouchStart</code></td>
+  <td><pre><code>
+  boolean altKey
+  DOMTouchList changedTouches
+  boolean ctrlKey
+  boolean getModifierState(key)
+  boolean metaKey
+  boolean shiftKey
+  DOMTouchList targetTouches
+  DOMTouchList touches
+  </code></pre></td>
+  </tr>
+  <tr>
+  <td>UI</td>
+  <td><code>onScroll</code></td>
+  <td><pre><code>
+  number detail
+  DOMAbstractView view
+  </code></pre></td>
+  </tr>
+  <tr>
+  <td>Wheel</td>
+  <td><code>onWheel</code></td>
+  <td><pre><code>
+  number deltaMode
+  number deltaX
+  number deltaY
+  number deltaZ
+  </code></pre></td>
+  </tr>
+
+  <tr>
+  <td>Media</td>
+  <td><code>onAbort onCanPlay onCanPlayThrough onDurationChange onEmptied onEncrypted onEnded onError onLoadedData onLoadedMetadata onLoadStart onPause onPlay onPlaying onProgress onRateChange onSeeked onSeeking onStalled onSuspend onTimeUpdate onVolumeChange onWaiting</code></td>
+  <td></td>
+  </tr>
+
+  <tr>
+  <td>Image</td>
+  <td><code>onLoad onError</code></td>
+  <td></td>
+  </tr>
+
+  <tr>
+  <td>Animation</td>
+  <td><code>onAnimationStart onAnimationEnd onAnimationIteration</code></td>
+  <td><pre><code>
+  string animationName
+  string pseudoElement
+  float elapsedTime
+  </code></pre></td>
+  </tr>
+
+  <tr>
+  <td>Transition</td>
+  <td><code>onTransitionEnd</code></td>
+  <td><pre><code>
+  string propertyName
+  string pseudoElement
+  float elapsedTime
+  </code></pre></td>
+  </tr>
+
+</table>
+
+
+#### Notes
+
+* React normalizes events so that they behave consistently across different browsers.
+* Events in React are triggered on the bubbling phase. To trigger an event on the capturing phase add the word "Capture" to the event name (e.g. `onClick` would become `onClickCapture`).
+* If you need the browser event details for a given event you can access this by using the `nativeEvent` property found in the SyntheticEvent object passed into React event hander/callbacks.
+* React does not actually attach events to the nodes themselves, it uses [event delegation](http://domenlightenment.com/#11.14).
+* `e.stopPropagation()` or `e.preventDefault()` should be triggered manually to [stop](http://domenlightenment.com/#11.9) event [propagation](http://domenlightenment.com/#11.10) instead of `returning false;`.
+* Not all DOM events are provided by React. But you can still make use of them [using React lifecycle methods](https://facebook.github.io/react/tips/dom-event-listeners.html).
