--- a/react-nodes/4.7.md
+++ b/react-nodes/4.7.md
@@ -195,3 +195,4 @@ boolean shiftKey
 * If you need the browser event details you can access this by using the `nativeEvent` property found in the SyntheticEvent object passed into React event hander/callback.
 * React does not actually attach events to the to the nodes themselves, it uses [event delegation](http://domenlightenment.com/#11.14).
 * `e.stopPropagation()` or `e.preventDefault()` should be triggered manually to [stop](http://domenlightenment.com/#11.9) event [propagation](http://domenlightenment.com/#11.10) instead of `returning false;`.
+* Not all DOM events are provided by React. But you can still make use of them [using React lifecycle methods](https://facebook.github.io/react/tips/dom-event-listeners.html).
