--- a/basic-react-components/6.6.md
+++ b/basic-react-components/6.6.md
@@ -1,6 +1,6 @@
 # Defining Events on Components
 
-To define events on components, events and event handlers/callbacks (discussed in Ch. 4 - 4.7 and Ch. 5 - 5.8) can be added to React nodes inside of a components render configuration option.
+To define events on components, events and event handlers/callbacks (discussed in Ch. 4 - 4.7 and Ch. 5 - 5.8) can be added to React nodes inside of a components `render` configuration option.
 
 In the code example, events are set on React nodes (via JSX) using what looks like component props.
 
@@ -21,130 +21,130 @@ React supports the following events and event specific syntheticEvent properties
 <th>Event Specific Properties:</th>
 </tr>
   <tr>
-  	<td>Clipboard</td>
-    <td><code>onCopy onCut onPaste</code></td>
-	<td><code>DOMDataTransfer clipboardData</code></td>
+  	<td><p>Clipboard</p></td>
+    <td>onCopy, onCut, onPaste</td>
+	<td>DOMDataTransfer clipboardData</td>
   </tr>
   <tr>
-  	<td>Composition</td>
-    <td><code>onCompositionEnd onCompositionStart onCompositionUpdate</code></td>
-	<td><code>string data</code></td>
+  	<td><p>Composition</p></td>
+    <td>onCompositionEnd, onCompositionStart, onCompositionUpdate</td>
+	<td>data</td>
   </tr>
   <tr>
-  	<td>Keyboard</td>
-    <td><code>onKeyDown onKeyPress onKeyUp</code></td>
-	<td><pre><code>boolean altKey
-number charCode
-boolean ctrlKey
-boolean getModifierState(key)
-string key
-number keyCode
-string locale
-number location
-boolean metaKey
-boolean repeat
-boolean shiftKey
-number which</code></pre></td>
+  	<td><p>Keyboard</p></td>
+    <td>onKeyDown, onKeyPress, onKeyUp</td>
+	<td>altKey
+charCode
+ctrlKey
+getModifierState(key)
+key
+keyCode
+locale
+location
+metaKey
+repeat
+shiftKey
+which</td>
   </tr>
   <tr>
-	  <td>Focus</td>
-	<td><code>onChange onInput onSubmit</code></td>
-  <td><code>DOMEventTarget relatedTarget</code></td>
+	  <td><p>Focus</p></td>
+	<td>onChange, onInput, onSubmit</td>
+  <td>DOMEventTarget relatedTarget</td>
   </tr>
   <tr>
-	<td>Form</td>
-  <td><code>onFocus onBlur</code></td>
+	<td><p>Form</p></td>
+  <td>onFocus, onBlur</td>
   <td></td>
   </tr>
   <tr>
-	<td>Mouse</td>
-  <td><code>onClick onContextMenu onDoubleClick onDrag onDragEnd onDragEnter onDragExit
-onDragLeave onDragOver onDragStart onDrop onMouseDown onMouseEnter onMouseLeave
-onMouseMove onMouseOut onMouseOver onMouseUp</code></td>
-  <td><pre><code>boolean altKey
-number button
-number buttons
-number clientX
-number clientY
-boolean ctrlKey
-boolean getModifierState(key)
-boolean metaKey
-number pageX
-number pageY
+	<td><p>Mouse</p></td>
+  <td>onClick, onContextMenu, onDoubleClick, onDrag, onDragEnd, onDragEnter, onDragExit
+onDragLeave, onDragOver, onDragStart, onDrop, onMouseDown, onMouseEnter, onMouseLeave
+onMouseMove, onMouseOut, onMouseOver, onMouseUp</td>
+  <td>altKey
+button
+buttons
+clientX
+clientY
+ctrlKey
+getModifierState(key)
+metaKey
+pageX
+pageY
 DOMEventTarget relatedTarget
-number screenX
-number screenY
-boolean shiftKey
-  </code></pre></td>
+screenX
+screenY
+shiftKey
+  </td>
   </tr>
   <tr>
-  <td>Selection</td>
-  <td><code>onSelect</code></td>
+  <td><p>Selection</p></td>
+  <td>onSelect</td>
   <td></td>
   </tr>
   <tr>
-  <td>Touch</td>
-  <td><code>onTouchCancel onTouchEnd onTouchMove onTouchStart</code></td>
-  <td><pre><code>
-  boolean altKey
+  <td><p>Touch</p></td>
+  <td>onTouchCancel, onTouchEnd, onTouchMove, onTouchStart</td>
+  <td>
+  altKey
   DOMTouchList changedTouches
-  boolean ctrlKey
-  boolean getModifierState(key)
-  boolean metaKey
-  boolean shiftKey
+  ctrlKey
+  getModifierState(key)
+  metaKey
+  shiftKey
   DOMTouchList targetTouches
   DOMTouchList touches
-  </code></pre></td>
+  </td>
   </tr>
   <tr>
-  <td>UI</td>
-  <td><code>onScroll</code></td>
-  <td><pre><code>
-  number detail
+  <td><p>UI</p></td>
+  <td>onScroll</td>
+  <td>
+  detail
   DOMAbstractView view
-  </code></pre></td>
+  </td>
   </tr>
   <tr>
-  <td>Wheel</td>
-  <td><code>onWheel</code></td>
-  <td><pre><code>
-  number deltaMode
-  number deltaX
-  number deltaY
-  number deltaZ
-  </code></pre></td>
+  <td><p>Wheel</p></td>
+  <td>onWheel</td>
+  <td>
+  deltaMode
+  deltaX
+  deltaY
+  deltaZ
+  </td>
   </tr>
 
   <tr>
-  <td>Media</td>
-  <td><code>onAbort onCanPlay onCanPlayThrough onDurationChange onEmptied onEncrypted onEnded onError onLoadedData onLoadedMetadata onLoadStart onPause onPlay onPlaying onProgress onRateChange onSeeked onSeeking onStalled onSuspend onTimeUpdate onVolumeChange onWaiting</code></td>
+  <td><p>Media</p></td>
+  <td>onAbort, onCanPlay, onCanPlayThrough, onDurationChange, onEmptied, onEncrypted, onEnded, onError, onLoadedData, onLoadedMetadata, onLoadStart, onPause, onPlay, onPlaying, onProgress, onRateChange, onSeeked, onSeeking, onStalled, onSuspend, onTimeUpdate, onVolumeChange, onWaiting</td>
   <td></td>
   </tr>
 
   <tr>
-  <td>Image</td>
-  <td><code>onLoad onError</code></td>
+  <td><p>Image</p></td>
+  <td>onLoad, onError</td>
   <td></td>
   </tr>
 
   <tr>
-  <td>Animation</td>
-  <td><code>onAnimationStart onAnimationEnd onAnimationIteration</code></td>
-  <td><pre><code>
-  string animationName
-  string pseudoElement
-  float elapsedTime
-  </code></pre></td>
+  <td><p>Animation</p></td>
+  <td>onAnimationStart, onAnimationEnd, onAnimationIteration</td>
+  <td>
+  animationName
+  pseudoElement
+  elapsedTime
+  </td>
   </tr>
 
   <tr>
-  <td>Transition</td>
-  <td><code>onTransitionEnd</code></td>
-  <td><pre><code>
-  string propertyName
-  string pseudoElement
-  float elapsedTime
-  </code></pre></td>
+  <td><p>Transition</p></td>
+  <td>onTransitionEnd</td>
+  <td>
+  propertyName
+  pseudoElement
+  elapsedTime
+  </td>
   </tr>
 
 </table>
