--- a/react-nodes/4.7.md
+++ b/react-nodes/4.7.md
@@ -4,7 +4,7 @@ Events can be added to React nodes much like events can be added to DOM nodes. I
 
 > [source code](https://jsfiddle.net/ct5acw2y/#tabs=js,result,html,resources)
 
-Note how the property name for an event in React starts with 'on'.
+Note how the property name for an event in React starts with 'on' and is passed in the props argument object to the `ReactElement()` function.
 
 React creates what it calls a `SyntheticEvent` for each event, which contains the details for the event. Similar to the details that are define for DOM events. The `SyntheticEvent` instance, for an event, is passed into the events handlers/callback functions. In the code below I am logging the details of a SyntheticEvent instance.
 
@@ -13,39 +13,39 @@ React creates what it calls a `SyntheticEvent` for each event, which contains th
 Every syntheticEvent object instance has the following properties.
 
 ```
-boolean bubbles
-boolean cancelable
+bubbles
+cancelable
 DOMEventTarget currentTarget
-boolean defaultPrevented
-number eventPhase
-boolean isTrusted
+defaultPrevented
+eventPhase
+isTrusted
 DOMEvent nativeEvent
 void preventDefault()
-boolean isDefaultPrevented()
+isDefaultPrevented()
 void stopPropagation()
-boolean isPropagationStopped()
+isPropagationStopped()
 DOMEventTarget target
-number timeStamp
-string type
+timeStamp
+type
 ```
 
 Additionally properties are available depending upon the type/category of event that is used. For example the `onCick` syntheticEvent event also contains the following properties.
 
 ```
-boolean altKey
-number button
-number buttons
-number clientX
-number clientY
-boolean ctrlKey
-boolean getModifierState(key)
-boolean metaKey
-number pageX
-number pageY
+altKey
+button
+buttons
+clientX
+clientY
+ctrlKey
+getModifierState(key)
+metaKey
+pageX
+pageY
 DOMEventTarget relatedTarget
-number screenX
-number screenY
-boolean shiftKey
+screenX
+screenY
+shiftKey
 ```
 
 The table below outlines the unique syntheticEvent properties for each type/category of events.
@@ -59,130 +59,130 @@ React supports the following events:
 <th>Event Specific Properties:</th>
 </tr>
   <tr>
-  	<td>Clipboard</td>
-    <td><code>onCopy onCut onPaste</code></td>
-	<td><code>DOMDataTransfer clipboardData</code></td>
+  	<td><p>Clipboard</p></td>
+    <td>onCopy, onCut, onPaste</td>
+	<td>DOMDataTransfer clipboardData</td>
   </tr>
   <tr>
-  	<td>Composition</td>
-    <td><code>onCompositionEnd onCompositionStart onCompositionUpdate</code></td>
-	<td><code>string data</code></td>
+  	<td><p>Composition</p></td>
+    <td>onCompositionEnd, onCompositionStart, onCompositionUpdate</td>
+	<td>data</td>
   </tr>
   <tr>
-  	<td>Keyboard</td>
-    <td><code>onKeyDown onKeyPress onKeyUp</code></td>
-	<td><pre><code>boolean altKey
-number charCode
-boolean ctrlKey
-boolean getModifierState(key)
-string key
-number keyCode
-string locale
-number location
-boolean metaKey
-boolean repeat
-boolean shiftKey
-number which</code></pre></td>
+  	<td><p>Keyboard</p></td>
+    <td>onKeyDown, onKeyPress, onKeyUp</td>
+	<td>altKey
+charCode
+ctrlKey
+getModifierState(key)
+key
+keyCode
+locale
+location
+metaKey
+repeat
+shiftKey
+which</td>
   </tr>
   <tr>
-	  <td>Focus</td>
-	<td><code>onChange onInput onSubmit</code></td>
-  <td><code>DOMEventTarget relatedTarget</code></td>
+	  <td><p>Focus</p></td>
+	<td>onChange, onInput, onSubmit</td>
+  <td>DOMEventTarget relatedTarget</td>
   </tr>
   <tr>
-	<td>Form</td>
-  <td><code>onFocus onBlur</code></td>
+	<td><p>Form</p></td>
+  <td>onFocus, onBlur</td>
   <td></td>
   </tr>
   <tr>
-	<td>Mouse</td>
-  <td><code>onClick onContextMenu onDoubleClick onDrag onDragEnd onDragEnter onDragExit
-onDragLeave onDragOver onDragStart onDrop onMouseDown onMouseEnter onMouseLeave
-onMouseMove onMouseOut onMouseOver onMouseUp</code></td>
-  <td><pre><code>boolean altKey
-number button
-number buttons
-number clientX
-number clientY
-boolean ctrlKey
-boolean getModifierState(key)
-boolean metaKey
-number pageX
-number pageY
+	<td><p>Mouse</p></td>
+  <td>onClick, onContextMenu, onDoubleClick, onDrag, onDragEnd, onDragEnter, onDragExit
+onDragLeave, onDragOver, onDragStart, onDrop, onMouseDown, onMouseEnter, onMouseLeave
+onMouseMove, onMouseOut, onMouseOver, onMouseUp</td>
+  <td>altKey
+button
+buttons
+clientX
+clientY
+ctrlKey
+getModifierState(key)
+metaKey
+pageX
+pageY
 DOMEventTarget relatedTarget
-number screenX
-number screenY
-boolean shiftKey
-  </code></pre></td>
+screenX
+screenY
+shiftKey
+  </td>
   </tr>
   <tr>
-  <td>Selection</td>
-  <td><code>onSelect</code></td>
+  <td><p>Selection</p></td>
+  <td>onSelect</td>
   <td></td>
   </tr>
   <tr>
-  <td>Touch</td>
-  <td><code>onTouchCancel onTouchEnd onTouchMove onTouchStart</code></td>
-  <td><pre><code>
-  boolean altKey
+  <td><p>Touch</p></td>
+  <td>onTouchCancel, onTouchEnd, onTouchMove, onTouchStart</td>
+  <td>
+  altKey
   DOMTouchList changedTouches
-  boolean ctrlKey
-  boolean getModifierState(key)
-  boolean metaKey
-  boolean shiftKey
+  ctrlKey
+  getModifierState(key)
+  metaKey
+  shiftKey
   DOMTouchList targetTouches
   DOMTouchList touches
-  </code></pre></td>
+  </td>
   </tr>
   <tr>
-  <td>UI</td>
-  <td><code>onScroll</code></td>
-  <td><pre><code>
-  number detail
+  <td><p>UI</p></td>
+  <td>onScroll</td>
+  <td>
+  detail
   DOMAbstractView view
-  </code></pre></td>
+  </td>
   </tr>
   <tr>
-  <td>Wheel</td>
-  <td><code>onWheel</code></td>
-  <td><pre><code>
-  number deltaMode
-  number deltaX
-  number deltaY
-  number deltaZ
-  </code></pre></td>
+  <td><p>Wheel</p></td>
+  <td>onWheel</td>
+  <td>
+  deltaMode
+  deltaX
+  deltaY
+  deltaZ
+  </td>
   </tr>
 
   <tr>
-  <td>Media</td>
-  <td><code>onAbort onCanPlay onCanPlayThrough onDurationChange onEmptied onEncrypted onEnded onError onLoadedData onLoadedMetadata onLoadStart onPause onPlay onPlaying onProgress onRateChange onSeeked onSeeking onStalled onSuspend onTimeUpdate onVolumeChange onWaiting</code></td>
+  <td><p>Media</p></td>
+  <td>onAbort, onCanPlay, onCanPlayThrough, onDurationChange, onEmptied, onEncrypted, onEnded, onError, onLoadedData, onLoadedMetadata, onLoadStart, onPause, onPlay, onPlaying, onProgress, onRateChange, onSeeked, onSeeking, onStalled, onSuspend, onTimeUpdate, onVolumeChange, onWaiting</td>
   <td></td>
   </tr>
 
   <tr>
-  <td>Image</td>
-  <td><code>onLoad onError</code></td>
+  <td><p>Image</p></td>
+  <td>onLoad, onError</td>
   <td></td>
   </tr>
 
   <tr>
-  <td>Animation</td>
-  <td><code>onAnimationStart onAnimationEnd onAnimationIteration</code></td>
-  <td><pre><code>
-  string animationName
-  string pseudoElement
-  float elapsedTime
-  </code></pre></td>
+  <td><p>Animation</p></td>
+  <td>onAnimationStart, onAnimationEnd, onAnimationIteration</td>
+  <td>
+  animationName
+  pseudoElement
+  elapsedTime
+  </td>
   </tr>
 
   <tr>
-  <td>Transition</td>
-  <td><code>onTransitionEnd</code></td>
-  <td><pre><code>
-  string propertyName
-  string pseudoElement
-  float elapsedTime
-  </code></pre></td>
+  <td><p>Transition</p></td>
+  <td>onTransitionEnd</td>
+  <td>
+  propertyName
+  pseudoElement
+  elapsedTime
+  </td>
   </tr>
 
 </table>
